methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:9: error: not found: value faireV
        faireV(Color.YELLOW);
        ^